--- a/docker.org
+++ b/docker.org
@@ -78,6 +78,11 @@ http://stackoverflow.com/questions/17236796/how-to-remove-old-docker-containers
 http://stackoverflow.com/questions/32723111/how-to-remove-old-and-unused-docker-images
 =============
 
+** docker permission error accessing /var/run/docker.sock
+#+BEGIN_SRC 
+sudo usermod -a -G docker $USER
+sudo chmod 666 /var/run/docker.sock
+#+END_SRC
 * Docker Swarm
 
 docker swarm init --advertise-addr 192.168.0.101:2377 --listen-addr 192.168.0.101:2377
