--- a/python/python.org
+++ b/python/python.org
@@ -89,6 +89,21 @@ pip help install
 python3 -m pip search asyncio
 
 
+
+** local user install python
+
+#+BEGIN_SRC 
+curl -O https://bootstrap.pypa.io/get-pip.py
+python -m pip install ansible --user
+python -m pip install virtualenv --user
+
+#+END_SRC
+
+** python tls error
+#+BEGIN_SRC 
+pip install --trusted-host pypi.python.org --upgrad pip
+#+END_SRC
+
 ** packages
 
 *** python looks in sys.path
@@ -167,3 +182,24 @@ There is one more catch in this scenario. All our packages are modules so we mus
 python -m pys3viewercli.main
 #+END_SRC
 
+** local install python virtualenv ansible
+
+#+BEGIN_SRC 
+
+tar xzf Python-2.7.5.tgz
+cd Python-2.7.5.tgz
+mkdir -p ~/.localpython
+/configure --prefix=$HOME/.localpython
+make
+make install
+mkdir -p src
+tar -xzvf virtualenv-12.0.0.tar.gz ./src
+cd virtualenv-12.0.0
+~/.localpython/bin/python setup.py install
+python -m virtualenv venv -p $HOME/.localpython/bin/python2.7
+source venv/bin/activate
+mkdir -p ~/tmp
+tar -xzvf ansible-2.6.4 -C ~/tmp
+cd ~/tmp/ansible-2.6.4
+~/tmp/ansible-2.6.4/bin/ansible-playbook -i hosts main.yml --vvv'
+#+END_SRC
